# minigem

./: Cargo.toml
minigem/: Cargo.toml
minigem/examples/: simple_client.rs
minigem/src/: connection.rs  error.rs  lib.rs  request.rs  response.rs
parser/: Cargo.toml
parser/src/: lib.rs  macros.rs
